# voice

./: .env  LICENSE  README_CONVERSATION_FLOW.md  app.py  pyproject.toml  test_conversation.py
live-translation/: README.md  setup.sh
live-translation/backend/: app.py  env.example  requirements.txt  translation_service.py
live-translation/frontend/: index.html  package.json
live-translation/frontend/src/: App.jsx  index.css
